--- a/index.html
+++ b/index.html
@@ -1,17 +1,31 @@
  <html> 
   <body>
-   <header> 
-    <h1> ESTUDANTES DE ADS - Apresentação </h1>
-    <h4>
-    Nosso site tem como objetivo apresentar, conhecer a trajetóra e também entrar em contato com     as alunas de Análise de Desenvolvimento de Sistemas (ADS) Karina e Myriam.
-     <br></br>
-     <p>Para acessar a página das respectivas alunas, poderá acessar pelo botão verde abaixo.</p>
+   <div id="apresentacao" > 
+   <img src="https://i.ibb.co/dpPZwnT/myriam.jpg"       width="800" alt="My">
+    <h1> Myriam Monteiro de Souza </h1>
+    <h2> Sobre mim </h2>  
+    <h4> Eu sou a Myriam, moro em São Paulo - SP.
+      <p>Eu sempre rodeei o mundo das artes, pois minha mãe trabalhava com artesanatos, costura e com desenho de moda. Sempre me inspirei na resistência e autenticidade que ela tinha para conseguir chegar a lugares potentes. Também me inspirava com meu pai  que trabalhava com tecidos. Assim, formei muitas memórias afetivas os ajudando e com o tempo essas atividades foram se tornando meus hobbies. </p>
     </h4>
-    <ul>
-      <li><a href="https://codepen.io/Myriam-Monteiro/pen/aberWGv" target=”_blank”>Conheça a            Myriam</a></li>
-      <li><a href="https://codepen.io/Myriam-Monteiro/pen/wBwBdab" target=”_blank”>Conheça a            Karina</a></li>
-    </ul>
-   </header>
-  <script src"script.js"></script>
- </body> 
-</html>
+   </div> 
+  <div id="lista">
+   <h2>meus interesses</h2>
+   <ol>  
+    <li> Fotografia </li>
+    <li> ilustração </li>
+    <li> Artesanato </li>
+    <li> Audiovisual </li>
+    <li> Trilhas </li>
+   </ol>
+   </div> 
+   <div id="Contato"> 
+    <p>Conheça meu portfólio de design Gráfico</p>
+     <a href= "https://myriam.46graus.com" target="_blank"> Clique Aqui </a> 
+  <p>Conheça meu portfólio de UX / UI Design</p>
+  <a href= "https://myriammonteirodesouza.46graus.com" target="_blank"> Clique Aqui </a>
+   <p>Acesse meu linkedin</p>
+   <a href= "https://www.linkedin.com/in/myriam-monteiro/" target="_blank"> Clique Aqui </a>
+   </div>
+    <script src"script.js"></script>
+</body>
+ </html>
