--- a/index.html
+++ b/index.html
@@ -1,31 +1,25 @@
  <html> 
   <body>
-   <div id="apresentacao" > 
-   <img src="https://i.ibb.co/dpPZwnT/myriam.jpg"       width="800" alt="My">
-    <h1> Myriam Monteiro de Souza </h1>
+   <div id="apresentação" > 
+ <img src="https://i.ibb.co/PWjxcBr/karina.jpg" width="800" alt="ka">
+    <h1> Karina Monteiro de Souza </h1>
     <h2> Sobre mim </h2>  
-    <h4> Eu sou a Myriam, moro em São Paulo - SP.
-      <p>Eu sempre rodeei o mundo das artes, pois minha mãe trabalhava com artesanatos, costura e com desenho de moda. Sempre me inspirei na resistência e autenticidade que ela tinha para conseguir chegar a lugares potentes. Também me inspirava com meu pai  que trabalhava com tecidos. Assim, formei muitas memórias afetivas os ajudando e com o tempo essas atividades foram se tornando meus hobbies. </p>
+      <h4>Sou a Karina, moro em São Paulo, Capital. Trabalho no segmento bancário há 8 anos, tenho 28 anos e iniciei um nova faculdade este ano. Meu objetivo é migrar de área , me interesso pela tecnologia e escolhi esse novo caminho.
     </h4>
    </div> 
   <div id="lista">
-   <h2>meus interesses</h2>
+   <h2>meus interesses  e hobbies</h2>
    <ol>  
-    <li> Fotografia </li>
     <li> ilustração </li>
-    <li> Artesanato </li>
-    <li> Audiovisual </li>
-    <li> Trilhas </li>
+      <li> Moda </li>
+      <li> Jogos </li>
+      <li> Atividade Física </li>
+      <li> Viagens </li>
    </ol>
    </div> 
    <div id="Contato"> 
-    <p>Conheça meu portfólio de design Gráfico</p>
-     <a href= "https://myriam.46graus.com" target="_blank"> Clique Aqui </a> 
-  <p>Conheça meu portfólio de UX / UI Design</p>
-  <a href= "https://myriammonteirodesouza.46graus.com" target="_blank"> Clique Aqui </a>
    <p>Acesse meu linkedin</p>
-   <a href= "https://www.linkedin.com/in/myriam-monteiro/" target="_blank"> Clique Aqui </a>
+   <a href= "https://www.linkedin.com/in/karina-monteiro-cea-3576b7b8/" target="_blank"> Clique Aqui </a>
    </div>
-    <script src"script.js"></script>
 </body>
  </html>
